# Docu-PoC

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  parsing.py  pyproject.toml
.streamlit/: config.toml
